# amortized-valuation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
adv/: __init__.py  dataset.py  model.py  pretrain.py  utils.py
experiments/: evaluate_accuracy_cifar.py  evaluate_accuracy_tabular.py  evaluate_mislabeled_cifar.py  evaluate_scaling_cifar.py  evaluate_scaling_tabular.py  monte_carlo.py  monte_carlo_distributional.py  pretrain_cifar.py  process_cifar.py  resnet_cifar.py  train_cifar.py  train_tabular.py  utils.py  verify_monte_carlo.py
